; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_nic7018_wdt.c_nic7018_get_timeleft.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_nic7018_wdt.c_nic7018_get_timeleft.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }
%struct.nic7018_wdt = type { i32, i64 }

@WDT_COUNT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*)* @nic7018_get_timeleft to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nic7018_get_timeleft(%struct.watchdog_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.watchdog_device*, align 8
  %4 = alloca %struct.nic7018_wdt*, align 8
  %5 = alloca i32, align 4
  store %struct.watchdog_device* %0, %struct.watchdog_device** %3, align 8
  %6 = load %struct.watchdog_device*, %struct.watchdog_device** %3, align 8
  %7 = call %struct.nic7018_wdt* @watchdog_get_drvdata(%struct.watchdog_device* %6)
  store %struct.nic7018_wdt* %7, %struct.nic7018_wdt** %4, align 8
  %8 = load %struct.nic7018_wdt*, %struct.nic7018_wdt** %4, align 8
  %9 = getelementptr inbounds %struct.nic7018_wdt, %struct.nic7018_wdt* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @WDT_COUNT, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @inb(i64 %12)
  %14 = and i32 %13, 15
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

18:                                               ; preds = %1
  %19 = load %struct.nic7018_wdt*, %struct.nic7018_wdt** %4, align 8
  %20 = getelementptr inbounds %struct.nic7018_wdt, %struct.nic7018_wdt* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @nic7018_timeout(i32 %21, i32 %22)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %18, %17
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.nic7018_wdt* @watchdog_get_drvdata(%struct.watchdog_device*) #1

declare dso_local i32 @inb(i64) #1

declare dso_local i32 @nic7018_timeout(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
